--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Player 3</p>
         <img class="img3" src="images/dice6.png">
       </div>
-      <div><p><a href="dicee.html" class="btn">play</a></p></div>
+      <div><p><a href="https://davido4646.github.io/Dice-Game" class="btn">play</a></p></div>
     </div>
 <script src="index.js" charset="utf-8"></script>
   </body>
